<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Color Coding</string>
    <string name="color_coding">COLOR CODING</string>
    <string name="color_coding_hint">Pick Colors</string>
    <string name="submit_colors">Choose One</string>
    <string name="color_of_the_day">Color of the Day</string>

    <!-- COLORS LIST -->
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="violet">Violet</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="brown">Brown</string>
    <string name="pink">Pink</string>
    <string name="gray">Gray</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>

</resources>
